--- a/research.html
+++ b/research.html
@@ -45,7 +45,7 @@
   </div>
   <div class="col-sm">
       <h4>Guiding the Development of Undergraduate Educational Robotics</h4>
-      <p><br>Bryce Ikeda, Janine Hoelscher, Ron Alterovitz, Daniel Szafir
+      <p>Bryce Ikeda, Janine Hoelscher, Ron Alterovitz, Daniel Szafir
       <br>Proceedings of the ACM Conference on Global Computing Education
       <br>December 2023 
       <br><a href="guiding_the_dev_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
@@ -60,7 +60,7 @@
   </div>
   <div class="col-sm">
       <h4>Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy</h4>
-      <p><br>Michael Walker, Thao Phung, Tathagata Chakraborti, Tom Williams, Daniel Szafir
+      <p>Michael Walker, Thao Phung, Tathagata Chakraborti, Tom Williams, Daniel Szafir
       <br>ACM Transactions on Human-Robot Interaction
       <br>July 2023
       <br><a href="virtual-augmented_pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
@@ -75,7 +75,7 @@
   </div>
   <div class="col-sm">
       <h4>Generating Executable Action Plans with Environmentally-Aware Language Models</h4>
-      <p><br>Maitrey Gramopadhye and Daniel Szafir
+      <p>Maitrey Gramopadhye and Daniel Szafir
       <br>Cornell University
       <br>May 2023
       <br><a href="generating-exec_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
@@ -90,7 +90,7 @@
   </div>
   <div class="col-sm">
       <h4>Predicting Positions of People in Human-Robot Conversational Groups</h4>
-      <p><br>Hooman Hedayati and Daniel Szafir
+      <p>Hooman Hedayati and Daniel Szafir
       <br>17th ACM/IEEE International Conference on Human-Robot Interaction (HRI)
       <br>March 2022
       <br><a href="predicting_positions_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
@@ -105,7 +105,7 @@
   </div>
   <div class="col-sm">
       <h4>Augmented Reality Coordination Of Human-Robot Interaction</h4>
-      <p><br>Daniel Szafir, Michael E. Walker, and Hooman Hedayati
+      <p>Daniel Szafir, Michael E. Walker, and Hooman Hedayati
       <br>University of Colorado
       <br>April 2021
       <br><a href="augmented_reality_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
