--- a/research.html
+++ b/research.html
@@ -111,10 +111,10 @@
 </div>
 
 <div class="container">
-  <footer class="pt-4 my-4 border-top">
+  <footer class="py-4 my-4 border-top">
     <div class="text-center">
       <span class="text-center"><p class="text-center">IRON Lab <br>
-        Sitterson Hall <br> <a href="https://www.unc.edu/">University of North Carolina at Chapel Hill</a> <br>
+        Sitterson Hall <br> <a href="https://www.unc.edu/" class="link-dark">University of North Carolina at Chapel Hill</a> <br>
         232 S Columbia St, Chapel Hill, NC 27514</p></span>
     </div>
   </footer>
