--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
                 <div class="container-fluid">
                     <a class="navbar-brand me-auto" href="#">
-                      <img src="Iron_logo.png" width="auto" height="100" class="d-inline-block align-top"> </a>
+                      <img src="Iron_logo.png" width="auto" height="75" class="d-inline-block align-top"> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -82,13 +82,18 @@
 
 <div class="container">
   <footer class="py-4 my-4 border-top">
+  <div class = "col">
     <div class="text-center">
-      <span class="text-center"><p class="text-center">IRON Lab <br>
-        Sitterson Hall <br> <a href="https://www.unc.edu/" class="link-dark">University of North Carolina at Chapel Hill</a> <br>
+      <span class="text-center"><p class="text-center">
+        IRON Lab<br>
+        Sitterson Hall <br> 
+        <a href="https://www.unc.edu/" class="link-dark">University of North Carolina at Chapel Hill</a> <br>
         232 S Columbia St, Chapel Hill, NC 27514</p></span>
     </div>
+  </div>
   </footer>
 </div>
+
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
