--- a/research.html
+++ b/research.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
             <div class="container-fluid">
                 <a class="navbar-brand me-auto" href="#">
-                  <img src="Iron_logo.png" width="auto" height="100" class="d-inline-block align-top"> </a>
+                  <img src="Iron_logo.png" width="auto" height="75" class="d-inline-block align-top"> </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -37,7 +37,7 @@
     </div>
 </header>
 
-<div class = "row"><h1 class = "text-left p-4">Current Research</h1></div>
+<div class = "row"><h1 class = "text-center p-4">Current Research</h1></div>
 
 <div class="row mb-5 mt-4">
   <div class="col-sm-5">
@@ -116,14 +116,18 @@
 
 <div class="container">
   <footer class="py-4 my-4 border-top">
+  <div class = "col">
     <div class="text-center">
-      <span class="text-center"><p class="text-center">IRON Lab <br>
-        Sitterson Hall <br> <a href="https://www.unc.edu/" class="link-dark">University of North Carolina at Chapel Hill</a> <br>
+      <span class="text-center"><p class="text-center">
+        IRON Lab<br>
+        Sitterson Hall <br> 
+        <a href="https://www.unc.edu/" class="link-dark">University of North Carolina at Chapel Hill</a> <br>
         232 S Columbia St, Chapel Hill, NC 27514</p></span>
     </div>
+  </div>
   </footer>
 </div>
-<hr>
+
 
 </div>
 
