--- a/team.html
+++ b/team.html
@@ -20,7 +20,7 @@
           <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
               <div class="container-fluid">
                   <a class="navbar-brand me-auto" href="#">
-                    <img src="Iron_logo.png" width="auto" height="100" class="d-inline-block align-top"> </a>
+                    <img src="Iron_logo.png" width="auto" height="75" class="d-inline-block align-top"> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -43,7 +43,7 @@
     <hr>
 <div class="row pb-5">
   <div class="col-md-3 text-left">
-    <img src="dan.jpg" style="max-width: 200px" class="rounded"></div>
+    <img src="/team_images/dan.jpg" style="max-width: 200px" alt= "Daniel Szafir" class="rounded"></div>
     <div class="col">
       <h4> Daniel Szafir </h4>
       <p>Dr. Daniel Szafir is an Assistant Professor in the Department of Computer Science and the ATLAS Institute at the University of Colorado, Boulder. He holds courtesy appointments in the Department of Aerospace Engineering Sciences and the Department of Information Science and is an affiliate of the CU Research and Engineering Center for Unmanned Vehicles (RECUV), the Institute of Cognitive Science (ICS), the Center for Neuroscience, and the Culture, Language, and Social Practice (CLASP) program. Dr. Szafirâ€™s research interests, which span the fields of human-robot interaction (HRI) and human-computer interaction (HCI), involve exploring how emerging interactive technologies, such as small aerial robots, wearable devices, and immersive virtual environments, may be designed to provide new forms of assistance to users in domains including collaborative work, education, and space exploration. He completed his Ph.D. in Computer Science at the University of Wisconsinâ€“Madison in 2015 and was named to the Forbes 30 Under 30: Science list in 2017. Dr. Szafirâ€™s work been featured in a variety of media outlets, including New Scientist, Engadget, and Discovery News, and his research collaborators and sponsors have included NASA, the National Science Foundation, Google, Intel, and Mitsubishi Heavy Industries.</p>
@@ -59,7 +59,7 @@
 
 <div class="row pb-5">
   <div class="col-md-3 pb-4 text-left">
-    <img src="Maitrey_Gramopadhye.jpeg" style="max-width: 200px;" alt="" class="rounded">
+    <img src="/team_images/Maitrey_Gramopadhye.jpeg" style="max-width: 200px;" alt="Maitrey Gramopadhye" class="rounded">
 </div>
     <div class="col pb-4">
         <h4> Maitrey Gramopadhye </h4>
@@ -72,7 +72,7 @@
 
 <div class="row pb-5 mt-4 pt-2">
   <div class="col-md-3 pb-4 text-left">
-    <img src="Nicholas_Conlon.jpg" style="max-width: 200px;" alt="" class="rounded">
+    <img src="/team_images/Nicholas_Conlon.jpg" style="max-width: 200px;" alt="Nicholas Conlon" class="rounded">
 </div>
     <div class="col pb-4">
       <h4> Nicholas Conlon </h4>
@@ -81,7 +81,7 @@
       </div>
 
 <div class="row pb-5 mt-4 pt-2">
-    <div class="col-md-3 pb-4 text-left"> <img src="Yang_Yue.jpg" style="max-width: 200px;" alt="" class="rounded"> </div>
+    <div class="col-md-3 pb-4 text-left"> <img src="/team_images/Yang_Yue.jpg" style="max-width: 200px;" alt="Yang Yue" class="rounded"> </div>
       <div class="col pb-4">
           <h4> Yang Yue </h4>
           <p>Yue Yang received his master degree in computer science in 2023 from Georgia Institute of Technology, and is now a Ph.D. student in computer science at the University of North Carolina at Chapel Hill. His research interests include human robot interaction, imitation learning, generative models.</p>
@@ -98,7 +98,7 @@
     </div>
 <hr>
 <div class="row pb-5 mt-4 pt-2">
-  <div class="col-md-3 pb-4 text-left"> <img src="Lilly_Nekervis.jpeg" style="max-width: 200px;" alt="" class="rounded"> </div>
+  <div class="col-md-3 pb-4 text-left"> <img src="/team_images/Lilly_Nekervis.jpeg" style="max-width: 200px;" alt="Lily Nekervis" class="rounded"> </div>
     <div class="col pb-4">
         <h4> LillyAnn Nekervis </h4>
         <p>I am a Junior at the University of North Carolina at Chapel Hill, majoring in Information Sciences and actively involved in the IRON Lab. I'm currently exploring autonomous robotic systems and their integration with artificial intelligence.</p>
@@ -134,13 +134,17 @@
 
 
 
-<div class="container">
-  <footer class="py-4 my-4 border-top">
-    <div class="text-center">
-      <span class="text-center"><p class="text-center">IRON Lab <br>
-        Sitterson Hall <br> <a href="https://www.unc.edu/" class="link-dark">University of North Carolina at Chapel Hill</a> <br>
-        232 S Columbia St, Chapel Hill, NC 27514</p></span>
+  <div class="container">
+    <footer class="py-4 my-4 border-top">
+    <div class = "col">
+      <div class="text-center">
+        <span class="text-center"><p class="text-center">
+          IRON Lab<br>
+          Sitterson Hall <br> 
+          <a href="https://www.unc.edu/" class="link-dark">University of North Carolina at Chapel Hill</a> <br>
+          232 S Columbia St, Chapel Hill, NC 27514</p></span>
       </div>
+    </div>
     </footer>
   </div>
 
