added links to news

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy</h5>
                   <p class="card-text">ACM Transactions on Human-Robot Interaction</p>
-                  <a href="#" class="btn btn-primary">Read it here</a>
+                  <a href="virtual-augmented_pdf" class="btn btn-primary">Read it here</a>
                 </div>
               </div>
         </div>
@@ -104,7 +104,7 @@
               <div class="card-body">
                 <h5 class="card-title">Predicting Positions of People in Human-Robot Conversational Groups</h5>
                 <p class="card-text">17th ACM/IEEE International Conference on Human-Robot Interaction (HRI)</p>
-                <a href="#" class="btn btn-primary">Read it here</a>
+                <a href="predicting_positions_pdf.pdf" class="btn btn-primary">Read it here</a>
               </div>
             </div>
       </div>
