minor formating things

--- a/team.html
+++ b/team.html
@@ -14,29 +14,29 @@
 <body>
     
 <div class = "container">
-  <header class = "row">
+  <header>
     <div class = "row">
       <div class="col-sm">
           <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
-              <div class="container-fluid">
+              <div class="container">
                   <a class="navbar-brand me-auto" href="#">
                     <img src="Iron_logo.png" width="auto" height="75" class="d-inline-block align-top"> </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
-                <ul class="navbar-nav  ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-            </div>
-        </nav>
-        </div>
-        </div>
-    </header>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
+              <ul class="navbar-nav  ms-auto mb-2">
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a></li>
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
+              </ul>
+          </div>
+          </div>
+      </nav>
+      </div>
+      </div>
+  </header>
 
 <div class = "row"> 
   <div class = "col"><h2 class = "text-left pt-3">Lab Director</h2> 
