--- a/index.html
+++ b/index.html
@@ -18,30 +18,31 @@
 <body>
 
 <div class = "container">
+  <header>
+    <div class = "row">
+      <div class="col-sm">
+          <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
+              <div class="container">
+                  <a class="navbar-brand me-auto" href="#">
+                    <img src="Iron_logo.png" width="auto" height="75" class="d-inline-block align-top"> </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
+              <ul class="navbar-nav ms-auto mb-0">
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a></li>
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
+              </ul>
+          </div>
+          </div>
+      </nav>
+      </div>
+      </div>
+  </header>
 
-  <div class = "row">
-    <div class="col-sm">
-        <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
-            <div class="container-fluid">
-                <a class="navbar-brand me-auto" href="#">
-                  <img src="Iron_logo.png" width="auto" height="75" class="d-inline-block align-top"> </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbar">
-                    <ul class="navbar-nav  ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-                </div>
-            </nav>
-        </div>
-</div>
-
-<div class = "row">
+<div class = "mt-1 row">
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -77,7 +78,7 @@
     </div>
 
     <div class = "row">
-        <h2  class="text-center mt-4 mb-3">Recent News</h2>
+        <h2  class="text-center mt-5 mb-3">Recent News</h2>
         <div class = "col-sm mb-3">
             <div class="card mx-auto" style="width: 18rem;">
                 <img class="card-im g-top" src="college-lecture.jpeg" alt="Card image cap">
