--- a/research.html
+++ b/research.html
@@ -17,14 +17,14 @@
   <div class = "row">
     <div class="col-sm">
         <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand me-auto" href="#">
                   <img src="Iron_logo.png" width="auto" height="75" class="d-inline-block align-top"> </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
-            <ul class="navbar-nav  ms-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav  ms-auto mb-2">
             <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
             <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a></li>
             <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
