--- a/research.html
+++ b/research.html
@@ -40,7 +40,7 @@
 <div class = "row"><h1 class = "text-left p-4">Current Research</h1></div>
 <div class="row mb-5 mt-4">
   <div class="col-sm-5 ">
-    <img src="college-lecture.jpeg" alt="Creative Commons license image of a college lecture.">
+    <img src="college-lecture.jpeg" alt="Creative Commons license image of a college lecture." class = "pb-4">
   </div>
   <div class="col-sm">
       <h4>Guiding the Development of Undergraduate Educational Robotics</h4>
@@ -55,7 +55,7 @@
 
 <div class = "row mb-5">
   <div class="col-sm-5">
-    <img src="human-robot-interaction.jpg" alt="Creative Commons license image of a woman interacting with a robot.">
+    <img src="human-robot-interaction.jpg" alt="Creative Commons license image of a woman interacting with a robot." class = "pb-4">
   </div>
   <div class="col-sm">
       <h4>Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy</h4>
@@ -70,7 +70,7 @@
 
 <div class = "row mb-5">
   <div class="col-sm-5">
-    <img src="language-models.jpg" alt="Creative Commons license image of a collection of words on a digital display.">
+    <img src="language-models.jpg" alt="Creative Commons license image of a collection of words on a digital display." class = "pb-4">
   </div>
   <div class="col-sm">
       <h4>Generating Executable Action Plans with Environmentally-Aware Language Models</h4>
@@ -85,7 +85,7 @@
 
 <div class = "row mb-5">
   <div class="col-sm-5">
-    <img src="human-robot-conversation-group.jpg" alt="Creative Commons license image of a woman interacting with a robot.">
+    <img src="human-robot-conversation-group.jpg" alt="Creative Commons license image of a woman interacting with a robot." class = "pb-4">
   </div>
   <div class="col-sm">
       <h4>Predicting Positions of People in Human-Robot Conversational Groups</h4>
@@ -100,7 +100,7 @@
 
 <div class = "row">
   <div class="col-sm-5">
-    <img src="augmented-reality.jpg" alt="Creative Commons license image of an augmented reality.">
+    <img src="augmented-reality.jpg" alt="Creative Commons license image of an augmented reality." class = "pb-4">
   </div>
   <div class="col-sm">
       <h4>Augmented Reality Coordination Of Human-Robot Interaction</h4>
