--- a/research.html
+++ b/research.html
@@ -117,10 +117,10 @@
   <footer class="py-4 my-4 border-top">
   <div class = "col">
     <div class="text-center">
-      <span class="text-center"><p class="text-center">
+      <span class="text-center"><p class="text-center text-white">
         IRON Lab<br>
         Sitterson Hall <br> 
-        <a href="https://www.unc.edu/" class="link-dark">University of North Carolina at Chapel Hill</a> <br>
+        <a href="https://www.unc.edu/" class="link-light">University of North Carolina at Chapel Hill</a> <br>
         232 S Columbia St, Chapel Hill, NC 27514</p></span>
     </div>
   </div>
