--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
         <div class="form">
             <form action="/" method="post">
               <h3>Contact us here!</h3>
-              <p >If you're interested in learning more about our or interested in getting involved, please use the contact form below.</p>
+              <p >If you're interested in learning more about our lab or in getting involved, please use the contact form below.</p>
                 <fieldset>
                   <input type="text" id="name" name="user_name" placeholder="your name" value="" required>
               
