--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                   <input type="text" id="text" name="user_text" placeholder="leave us a message here" value="" required>
                 </fieldset>
             
-                <button type="submit" class="gradient-button">
+                <button type="submit" class="submit-button">
                   <p>Submit</p>
                 </button>
               </form>
