--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,8 @@
     FB 241 <br>
     University of North Carolina at Chapel Hill <br>
     232 S Columbia St, Chapel Hill, NC 27514</p></div>
-  <div class = "row pb-2"><img class = "sitterson " src="sitterson_hall.jpg" class = "img-fluid" alt="Sitterson Hall"></div>
+  <div class = "row pb-2"><img class = "sitterson " src="sitterson_hall.jpg" class = "img-fluid" alt="Sitterson Hall">
+      <p class = "mt-1 text-center text-muted">Credit: UNC Department of Computer Science</p></div>
 </div>
 
 <div class = "col-md-4 bg-secondary">
