--- a/research.html
+++ b/research.html
@@ -47,7 +47,7 @@
       <p>Bryce Ikeda, Janine Hoelscher, Ron Alterovitz, Daniel Szafir
       <br>Proceedings of the ACM Conference on Global Computing Education
       <br>December 2023 
-      <br><a href="guiding_the_dev_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
+      <br><a href="guiding_the_dev_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light  mt-2">PDF</a>
     </p>
   </div>
 </div>
@@ -62,7 +62,7 @@
       <p>Michael Walker, Thao Phung, Tathagata Chakraborti, Tom Williams, Daniel Szafir
       <br>ACM Transactions on Human-Robot Interaction
       <br>July 2023
-      <br><a href="virtual-augmented_pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
+      <br><a href="virtual-augmented_pdf" class="btn btn-primary btn-sm rounded-0 text-light mt-2">PDF</a>
     </p>
   </div>
 </div>
@@ -77,7 +77,7 @@
       <p>Maitrey Gramopadhye and Daniel Szafir
       <br>Cornell University
       <br>May 2023
-      <br><a href="generating-exec_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
+      <br><a href="generating-exec_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light  mt-2">PDF</a>
     </p>
   </div>
 </div>
@@ -92,7 +92,7 @@
       <p>Hooman Hedayati and Daniel Szafir
       <br>17th ACM/IEEE International Conference on Human-Robot Interaction (HRI)
       <br>March 2022
-      <br><a href="predicting_positions_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
+      <br><a href="predicting_positions_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light mt-2">PDF</a>
     </p>
   </div>
 </div>
@@ -107,7 +107,7 @@
       <p>Daniel Szafir, Michael E. Walker, and Hooman Hedayati
       <br>University of Colorado
       <br>April 2021
-      <br><a href="augmented_reality_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light">PDF</a>
+      <br><a href="augmented_reality_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light mt-2">PDF</a>
     </p>
   </div>
 </div>
