--- a/research.html
+++ b/research.html
@@ -62,7 +62,7 @@
       <p>Michael Walker, Thao Phung, Tathagata Chakraborti, Tom Williams, Daniel Szafir
       <br>ACM Transactions on Human-Robot Interaction
       <br>July 2023
-      <br><a href="virtual-augmented_pdf" class="btn btn-primary btn-sm rounded-0 text-light mt-2">PDF</a>
+      <br><a href="virtual-augmented_pdf" class="btn bg-light btn-sm rounded-0 text-dark mt-2">PDF</a>
     </p>
   </div>
 </div>
@@ -77,7 +77,7 @@
       <p>Maitrey Gramopadhye and Daniel Szafir
       <br>Cornell University
       <br>May 2023
-      <br><a href="generating-exec_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light  mt-2">PDF</a>
+      <br><a href="generating-exec_pdf.pdf" class="btn bg-secondary btn-sm rounded-0 text-dark  mt-2">PDF</a>
     </p>
   </div>
 </div>
@@ -107,7 +107,7 @@
       <p>Daniel Szafir, Michael E. Walker, and Hooman Hedayati
       <br>University of Colorado
       <br>April 2021
-      <br><a href="augmented_reality_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light mt-2">PDF</a>
+      <br><a href="augmented_reality_pdf.pdf" class="btn bg-light btn-sm rounded-0 text-dark mt-2">PDF</a>
     </p>
   </div>
 </div>
