--- a/team.html
+++ b/team.html
@@ -42,13 +42,13 @@
   <div class = "col"><h2 class = "text-left pt-3">Lab Director</h2> 
     <hr>
 <div class="row pb-5">
-  <div class="col-md-3 text-left">
+  <div class="col-md-3 text-left pb-2">
     <img src="dan.jpg" style="max-width: 200px" alt= "Daniel Szafir" class="rounded"></div>
     <div class="col">
       <h4> Daniel Szafir </h4>
       <p>Dr. Daniel Szafir is an Assistant Professor in the Department of Computer Science and the ATLAS Institute at the University of Colorado, Boulder. He holds courtesy appointments in the Department of Aerospace Engineering Sciences and the Department of Information Science and is an affiliate of the CU Research and Engineering Center for Unmanned Vehicles (RECUV), the Institute of Cognitive Science (ICS), the Center for Neuroscience, and the Culture, Language, and Social Practice (CLASP) program. Dr. Szafirs' research interests, which span the fields of human-robot interaction (HRI) and human-computer interaction (HCI), involve exploring how emerging interactive technologies, such as small aerial robots, wearable devices, and immersive virtual environments, may be designed to provide new forms of assistance to users in domains including collaborative work, education, and space exploration. He completed his Ph.D. in Computer Science at the University of Wisconsinâ€“Madison in 2015 and was named to the Forbes 30 Under 30: Science list in 2017. Dr. Szafirzs' work been featured in a variety of media outlets, including New Scientist, Engadget, and Discovery News, and his research collaborators and sponsors have included NASA, the National Science Foundation, Google, Intel, and Mitsubishi Heavy Industries.</p>
       <a href="http://www.danszafir.com/" class="btn btn-primary btn-sm rounded-0 text-light ">Website</a>
-      <a href="https://scholar.google.com/citations?user=WxmhtyMAAAAJ&amp;hl=en&amp;oi=sra" class="btn btn-primary btn-sm rounded-0 text-light">Google Scholar</a>
+      <a href="https://scholar.google.com/citations?user=WxmhtyMAAAAJ&amp;hl=en&amp;oi=sra" class="btn bg-light btn-sm rounded-0 text-dark">Google Scholar</a>
     </div>
 
 
@@ -65,8 +65,8 @@
         <h4> Maitrey Gramopadhye </h4>
         <p>I am currently a PhD student in the Computer Science Department at the University of North Carolina at Chapel Hill. My research interests include human robot interaction and common sense reasoning in robotics. I am particularly interested in improving the robot reasoning, using Language and Vision-Language Models, to enable human robot collaboration for long-horizon tasks. Recently, I have worked on conditioning large language models on the objects present around a robot to generate situationally aware action plans. In the past I have worked on studying the zero-shot performance of vision transformers for video object segmentation and pose propagation. I have worked on Graph Machine Learning as a researcher at AI Garage, Mastercard and I'm interested in finding ways to port my experience across fields to my current and future projects. I also interned at Samsung Research Institute, Bangalore where I worked in the Computer Vision team of the Advanced Technology Lab. I completed my Bachelors in Technology in Computer Science from the Indian Institute of Technology, Bombay where I worked on my Undergraduate thesis in the field of 3D Reconstruction in Cryogenic Electron Microscopy. I also was the Software team lead for The IIT Bombay Mars Rover Team, where I worked on building rovers capable of traversing on Mars like terrain."</p>
           <a href="https://maitreygram.github.io" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
-          <a href="https://www.linkedin.com/in/maitrey-gramopadhye/" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
-          <a href="https://github.com/maitreygram" class="btn btn-primary btn-sm rounded-0 text-light">GitHub</a>
+          <a href="https://www.linkedin.com/in/maitrey-gramopadhye/" class="btn bg-light btn-sm rounded-0 text-dark">LinkedIn</a>
+          <a href="https://github.com/maitreygram" class="btn bg-secondary btn-sm rounded-0 text-dark">GitHub</a>
 </div>
 
 
@@ -86,8 +86,8 @@
           <h4> Yang Yue </h4>
           <p>Yue Yang received his master degree in computer science in 2023 from Georgia Institute of Technology, and is now a Ph.D. student in computer science at the University of North Carolina at Chapel Hill. His research interests include human robot interaction, imitation learning, generative models.</p>
             <a href="https://yy-gx.github.io/" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
-            <a href="https://www.linkedin.com/in/yue-yang-6a1493185/" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
-            <a href="https://github.com/yy-gx" class="btn btn-primary btn-sm rounded-0 text-light ">GitHub</a>
+            <a href="https://www.linkedin.com/in/yue-yang-6a1493185/" class="btn bg-light btn-sm rounded-0 text-dark">LinkedIn</a>
+            <a href="https://github.com/yy-gx" class="btn bg-secondary btn-sm rounded-0 text-dark">GitHub</a>
           </div>
     </div>
   </div>
@@ -103,7 +103,7 @@
         <h4> LillyAnn Nekervis </h4>
         <p>I am a Junior at the University of North Carolina at Chapel Hill, majoring in Information Sciences and actively involved in the IRON Lab. I'm currently exploring autonomous robotic systems and their integration with artificial intelligence.</p>
           <a href="www.linkedin.com/in/nekervis" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
-          <a href="https://github.com/TigerLillyAnn" class="btn btn-primary btn-sm rounded-0 text-light ">GitHub</a>
+          <a href="https://github.com/TigerLillyAnn" class="btn bg-light btn-sm rounded-0 text-dark ">GitHub</a>
         </div>
   </div>
 </div>
