--- a/research.html
+++ b/research.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
             <ul class="navbar-nav  ms-auto mb-2">
             <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a></li>
+            <li class="nav-item"><a class="nav-link active text-decoration-underline" aria-current="page" href="research.html">Research</a></li>
             <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
             <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
             </ul>
@@ -120,7 +120,7 @@
       <span class="text-center"><p class="text-center text-white">
         IRON Lab<br>
         Sitterson Hall <br> 
-        <a href="https://www.unc.edu/" class="link-light">University of North Carolina at Chapel Hill</a> <br>
+        <a href="https://www.unc.edu/" class="link-light text-decoration-none">University of North Carolina at Chapel Hill</a> <br>
         232 S Columbia St, Chapel Hill, NC 27514</p></span>
     </div>
   </div>
