--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                   <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
                   <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a></li>
                   <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
-                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
+                  <li class="nav-item"><a class="nav-link active text-decoration-underline" aria-current="page" href="contact.html">Contact</a></li>
                   </ul>
               </div>
               </div>
@@ -85,7 +85,7 @@
       <span class="text-center"><p class="text-center text-white">
         IRON Lab<br>
         Sitterson Hall <br> 
-        <a href="https://www.unc.edu/" class="link-light">University of North Carolina at Chapel Hill</a> <br>
+        <a href="https://www.unc.edu/" class="link-light text-decoration-none">University of North Carolina at Chapel Hill</a> <br>
         232 S Columbia St, Chapel Hill, NC 27514</p></span>
     </div>
   </div>
