--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
               <ul class="navbar-nav ms-auto mb-0">
-              <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link active text-decoration-underline" aria-current="page" href="index.html">Home</a></li>
               <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a></li>
               <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
               <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
