footer goes fully down, team sizing fixed

--- a/research.html
+++ b/research.html
@@ -114,7 +114,7 @@
 
 
 <div class="container">
-  <footer class="py-4 my-4 border-top">
+  <footer class="py-4 my-4 mb-0">
   <div class = "col">
     <div class="text-center">
       <span class="text-center"><p class="text-center text-white">
