--- a/team.html
+++ b/team.html
@@ -11,8 +11,8 @@
     </style>
     <link rel="stylesheet" href="css/stylesheet.css">
 </head>
-<body>
-    
+
+<body>    
 <div class = "container">
   <header>
     <div class = "row">
@@ -20,7 +20,7 @@
           <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
               <div class="container">
                   <a class="navbar-brand me-auto" href="#">
-                    <img src="Iron_logo.png" width="auto" height="75" class="d-inline-block align-top"> </a>
+                    <img src="Iron_logo.png" height="75" class="d-inline-block align-top" alt = "IRON logo"> </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
@@ -39,18 +39,18 @@
   </header>
 
 <div class = "row"> 
-  <div class = "col"><h2 class = "text-left pt-3">Lab Director</h2> 
+  <div class = "col"><h2 class = "text-left pt-3">Lab Director</h2> </div>
     <hr>
 <div class="row pb-5">
-  <div class="col-md-3 text-left pb-2">
+  <div class="col text-left pb-2">
     <img src="dan.jpg" style="max-width: 200px" alt= "Daniel Szafir" class="rounded"></div>
-    <div class="col">
+    <div class="col-md-9">
       <h4> Daniel Szafir </h4>
       <p>Dr. Daniel Szafir is an Assistant Professor in the Department of Computer Science and the ATLAS Institute at the University of Colorado, Boulder. He holds courtesy appointments in the Department of Aerospace Engineering Sciences and the Department of Information Science and is an affiliate of the CU Research and Engineering Center for Unmanned Vehicles (RECUV), the Institute of Cognitive Science (ICS), the Center for Neuroscience, and the Culture, Language, and Social Practice (CLASP) program. Dr. Szafirs' research interests, which span the fields of human-robot interaction (HRI) and human-computer interaction (HCI), involve exploring how emerging interactive technologies, such as small aerial robots, wearable devices, and immersive virtual environments, may be designed to provide new forms of assistance to users in domains including collaborative work, education, and space exploration. He completed his Ph.D. in Computer Science at the University of Wisconsinâ€“Madison in 2015 and was named to the Forbes 30 Under 30: Science list in 2017. Dr. Szafirzs' work been featured in a variety of media outlets, including New Scientist, Engadget, and Discovery News, and his research collaborators and sponsors have included NASA, the National Science Foundation, Google, Intel, and Mitsubishi Heavy Industries.</p>
       <a href="http://www.danszafir.com/" class="btn btn-primary btn-sm rounded-0 text-light ">Website</a>
       <a href="https://scholar.google.com/citations?user=WxmhtyMAAAAJ&amp;hl=en&amp;oi=sra" class="btn bg-light btn-sm rounded-0 text-dark">Google Scholar</a>
     </div>
-
+  </div>
 
 <div class = "row"> 
   <h2 class = "mt-5 pb-3 text-left">Graduate Students</h2> 
@@ -58,31 +58,32 @@
 <hr>
 
 <div class="row pb-5">
-  <div class="col-md-3 pb-4 text-left">
+  <div class="col pb-4 text-left">
     <img src="Maitrey_Gramopadhye.jpeg" style="max-width: 200px;" alt="Maitrey Gramopadhye" class="rounded">
 </div>
-    <div class="col pb-4">
+    <div class="col-md-9 pb-4">
         <h4> Maitrey Gramopadhye </h4>
         <p>I am currently a PhD student in the Computer Science Department at the University of North Carolina at Chapel Hill. My research interests include human robot interaction and common sense reasoning in robotics. I am particularly interested in improving the robot reasoning, using Language and Vision-Language Models, to enable human robot collaboration for long-horizon tasks. Recently, I have worked on conditioning large language models on the objects present around a robot to generate situationally aware action plans. In the past I have worked on studying the zero-shot performance of vision transformers for video object segmentation and pose propagation. I have worked on Graph Machine Learning as a researcher at AI Garage, Mastercard and I'm interested in finding ways to port my experience across fields to my current and future projects. I also interned at Samsung Research Institute, Bangalore where I worked in the Computer Vision team of the Advanced Technology Lab. I completed my Bachelors in Technology in Computer Science from the Indian Institute of Technology, Bombay where I worked on my Undergraduate thesis in the field of 3D Reconstruction in Cryogenic Electron Microscopy. I also was the Software team lead for The IIT Bombay Mars Rover Team, where I worked on building rovers capable of traversing on Mars like terrain."</p>
           <a href="https://maitreygram.github.io" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
           <a href="https://www.linkedin.com/in/maitrey-gramopadhye/" class="btn bg-light btn-sm rounded-0 text-dark">LinkedIn</a>
           <a href="https://github.com/maitreygram" class="btn bg-secondary btn-sm rounded-0 text-dark">GitHub</a>
 </div>
+</div>
 
 
 <div class="row pb-5 mt-4 pt-2">
-  <div class="col-md-3 pb-4 text-left">
+  <div class="col pb-4 text-left">
     <img src="Nicholas_Conlon.jpg" style="max-width: 200px;" alt="Nicholas Conlon" class="rounded">
 </div>
-    <div class="col pb-4">
+    <div class="col-md-9 pb-4">
       <h4> Nicholas Conlon </h4>
       <p>Nick is a PhD candidate in the Department of Computer Science at the University of Colorado at Boulder. In his research, he is developing methods for intelligent agents to assess their own competencies and investigating the impacts of communicating such assessments within a human-machine team. Prior to pursuing PhD, he worked in aerospace R&D developing algorithms and software for real-world applications including Uncrewed Aerial System (UAS) mission planning, battlespace decision-support, and space situational awareness. He also served several years in the United States Army Airborne Infantry. Nick received his B.S. in Computer Science from the University of Massachusetts at Amherst (2014), and his M.S. in Computer Science from the University of Massachusetts at Lowell (2018).</p>
           <a href="https://www.linkedin.com/in/nicholas-conlon/" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
       </div>
 
 <div class="row pb-5 mt-4 pt-2">
-    <div class="col-md-3 pb-4 text-left"> <img src="Yang_Yue.jpg" style="max-width: 200px;" alt="Yang Yue" class="rounded"> </div>
-      <div class="col pb-4">
+    <div class="col pb-4 text-left"> <img src="Yang_Yue.jpg" style="max-width: 200px;" alt="Yang Yue" class="rounded"> </div>
+      <div class="col-md-9 pb-4">
           <h4> Yang Yue </h4>
           <p>Yue Yang received his master degree in computer science in 2023 from Georgia Institute of Technology, and is now a Ph.D. student in computer science at the University of North Carolina at Chapel Hill. His research interests include human robot interaction, imitation learning, generative models.</p>
             <a href="https://yy-gx.github.io/" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
@@ -98,8 +99,8 @@
     </div>
 <hr>
 <div class="row pb-5 mt-4 pt-2">
-  <div class="col-md-3 pb-4 text-left"> <img src="Lilly_Nekervis.jpeg" style="max-width: 200px;" alt="Lily Nekervis" class="rounded"> </div>
-    <div class="col pb-4">
+  <div class="col pb-4 text-left"> <img src="Lilly_Nekervis.jpeg" style="max-width: 200px;" alt="Lily Nekervis" class="rounded"> </div>
+    <div class="col-md-9 pb-4">
         <h4> LillyAnn Nekervis </h4>
         <p>I am a Junior at the University of North Carolina at Chapel Hill, majoring in Information Sciences and actively involved in the IRON Lab. I'm currently exploring autonomous robotic systems and their integration with artificial intelligence.</p>
           <a href="www.linkedin.com/in/nekervis" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
@@ -135,20 +136,20 @@
 
 
   <div class="container">
-    <footer class="py-4 my-4 border-top">
+    <footer class="py-4 my-4 mb-0 border-top">
     <div class = "col">
       <div class="text-center">
-        <span class="text-center"><p class="text-center text-white">
+        <p class="text-center text-white">
           IRON Lab<br>
           Sitterson Hall <br> 
           <a href="https://www.unc.edu/" class="link-light text-decoration-none">University of North Carolina at Chapel Hill</a> <br>
-          232 S Columbia St, Chapel Hill, NC 27514</p></span>
+          232 S Columbia St, Chapel Hill, NC 27514</p>
       </div>
     </div>
     </footer>
   </div>
 
-
+</div>
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
