--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 </div>
 
 <div class="container">
-  <footer class="py-4 my-4 border-top">
+  <footer class="py-4 my-4 mb-0 border-top">
   <div class = "col">
     <div class="text-center">
       <span class="text-center"><p class="text-center text-white">
