--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="otter1.jpg" alt="First slide">
+      <img class="d-block w-100" src="otter1.jpg" alt="Otters! photo from https://animals.sandiegozoo.org/animals/otter">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="otter2.jpg" alt="Second slide">
+      <img class="d-block w-100" src="otter2.jpg" alt="Otters! Photo from public domain">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="group_labs_photo.jpg" alt="Third slide">
