--- a/team.html
+++ b/team.html
@@ -20,7 +20,7 @@
           <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
               <div class="container">
                   <a class="navbar-brand me-auto" href="#">
-                    <img src="Iron_logo.png" height="75" class="d-inline-block align-top" alt = "IRON logo"> </a>
+                    <img src="Iron_logo.png"  alt="logo" height="75" class="d-inline-block align-top" alt = "IRON logo"> </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
