--- a/contact.html
+++ b/contact.html
@@ -67,8 +67,9 @@
     FB 241 <br>
     University of North Carolina at Chapel Hill <br>
     232 S Columbia St, Chapel Hill, NC 27514</p></div>
-  <div class = "row pb-2"><img class = "sitterson " src="sitterson_hall.jpg" class = "img-fluid" alt="Sitterson Hall">
-      <p class = "mt-1 text-center text-muted">Credit: UNC Department of Computer Science</p></div>
+  <div class = "row pb-2">
+    <img class = "img-fluid" src="sitterson_hall.jpg" alt="Sitterson Hall - Credit to UNC Computer Science" >
+      <p class = "mt-1 text-center text-muted">UNC Department of Computer Science</p></div>
 </div>
 
 <div class = "col-md-4 bg-secondary">
@@ -82,11 +83,11 @@
   <footer class="py-4 my-4 mb-0 border-top">
   <div class = "col">
     <div class="text-center">
-      <span class="text-center"><p class="text-center text-white">
+      <span class="text-center text-white">
         IRON Lab<br>
         Sitterson Hall <br> 
         <a href="https://www.unc.edu/" class="link-light text-decoration-none">University of North Carolina at Chapel Hill</a> <br>
-        232 S Columbia St, Chapel Hill, NC 27514</p></span>
+        232 S Columbia St, Chapel Hill, NC 27514</span>
     </div>
   </div>
   </footer>
