--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
           <footer class="py-4">
             <div class = "col">
               <div class="text-center">
-                <span class="text-center"><p class="text-center text-white">
+                <span class="text-center text-white">
                   IRON Lab<br>
                   Sitterson Hall <br> 
                   <a href="https://www.unc.edu/" class="link-light text-decoration-none">University of North Carolina at Chapel Hill</a> <br>
-                  232 S Columbia St, Chapel Hill, NC 27514</p></span>
+                  232 S Columbia St, Chapel Hill, NC 27514</span>
               </div>
             </div>
             </footer>
