--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
               <div class="container">
                   <a class="navbar-brand me-auto" href="#">
-                    <img src="Iron_logo.png" alt="logo" height="75" class="d-inline-block align-top"> </a>
+                    <img src="Iron_logo.png" alt=" IRON logo" height="75" class="d-inline-block align-top"> </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
