--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class = "container">
   <header>
     <div class = "row">
-      <div class="col-sm">
+      <div class="col">
           <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
               <div class="container">
                   <a class="navbar-brand me-auto" href="#">
