--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@
     <hr>
 <div class="row pb-5">
   <div class="col text-left pb-2">
-    <img src="dan.jpg" style="max-width: 200px" alt= "Daniel Szafir" class="rounded"></div>
+    <img src="/Users/lilnekervis/Documents/GitHub/Iron-Lab-Website/headshots/dan.jpg" style="max-width: 200px" alt= "Daniel Szafir" class="rounded"></div>
     <div class="col-md-9">
       <h4> Daniel Szafir </h4>
       <p>Dr. Daniel Szafir is an Assistant Professor in the Department of Computer Science and the ATLAS Institute at the University of Colorado, Boulder. He holds courtesy appointments in the Department of Aerospace Engineering Sciences and the Department of Information Science and is an affiliate of the CU Research and Engineering Center for Unmanned Vehicles (RECUV), the Institute of Cognitive Science (ICS), the Center for Neuroscience, and the Culture, Language, and Social Practice (CLASP) program. Dr. Szafirs' research interests, which span the fields of human-robot interaction (HRI) and human-computer interaction (HCI), involve exploring how emerging interactive technologies, such as small aerial robots, wearable devices, and immersive virtual environments, may be designed to provide new forms of assistance to users in domains including collaborative work, education, and space exploration. He completed his Ph.D. in Computer Science at the University of Wisconsinâ€“Madison in 2015 and was named to the Forbes 30 Under 30: Science list in 2017. Dr. Szafirzs' work been featured in a variety of media outlets, including New Scientist, Engadget, and Discovery News, and his research collaborators and sponsors have included NASA, the National Science Foundation, Google, Intel, and Mitsubishi Heavy Industries.</p>
