--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@
     <hr>
 <div class="row pb-5">
   <div class="col text-left pb-2">
-    <img src="/Users/lilnekervis/Documents/GitHub/Iron-Lab-Website/headshots/dan.jpg" style="max-width: 200px" alt= "Daniel Szafir" class="rounded"></div>
+    <img src="headshots/dan.jpg" style="max-width: 200px" alt= "Daniel Szafir" class="rounded"></div>
     <div class="col-md-9">
       <h4> Daniel Szafir </h4>
       <p>Dr. Daniel Szafir is an Assistant Professor in the Department of Computer Science and the ATLAS Institute at the University of Colorado, Boulder. He holds courtesy appointments in the Department of Aerospace Engineering Sciences and the Department of Information Science and is an affiliate of the CU Research and Engineering Center for Unmanned Vehicles (RECUV), the Institute of Cognitive Science (ICS), the Center for Neuroscience, and the Culture, Language, and Social Practice (CLASP) program. Dr. Szafirs' research interests, which span the fields of human-robot interaction (HRI) and human-computer interaction (HCI), involve exploring how emerging interactive technologies, such as small aerial robots, wearable devices, and immersive virtual environments, may be designed to provide new forms of assistance to users in domains including collaborative work, education, and space exploration. He completed his Ph.D. in Computer Science at the University of Wisconsinâ€“Madison in 2015 and was named to the Forbes 30 Under 30: Science list in 2017. Dr. Szafirzs' work been featured in a variety of media outlets, including New Scientist, Engadget, and Discovery News, and his research collaborators and sponsors have included NASA, the National Science Foundation, Google, Intel, and Mitsubishi Heavy Industries.</p>
@@ -52,6 +52,21 @@
     </div>
   </div>
 
+<!--
+  Example code for member addition
+  <div class="row pb-5 mt-4 pt-2">
+  <div class="col pb-4 text-left"> <img src="headshots/YOURHEADSHOT" style="max-width: 200px;" alt="YOUR NAME" class="rounded"> </div>
+    <div class="col-md-9 pb-4">
+        <h4> YOUR NAME </h4>
+        <p>BIO</p>
+          <a href="YOUR LINKEDIN LINK" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
+          <a href="YOUR GITHUB LINK" class="btn bg-light btn-sm rounded-0 text-dark ">GitHub</a>
+          <a href="YOUR WEBSITE LINK" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
+        </div>
+  </div>
+</div>
+-->
+
 <div class = "row"> 
   <h2 class = "mt-5 pb-3 text-left">Graduate Students</h2> 
 </div>
@@ -59,7 +74,7 @@
 
 <div class="row pb-5">
   <div class="col pb-4 text-left">
-    <img src="Maitrey_Gramopadhye.jpeg" style="max-width: 200px;" alt="Maitrey Gramopadhye" class="rounded">
+    <img src="headshots/Maitrey_Gramopadhye.jpeg" style="max-width: 200px;" alt="Maitrey Gramopadhye" class="rounded">
 </div>
     <div class="col-md-9 pb-4">
         <h4> Maitrey Gramopadhye </h4>
@@ -73,7 +88,7 @@
 
 <div class="row pb-5 mt-4 pt-2">
   <div class="col pb-4 text-left">
-    <img src="Nicholas_Conlon.jpg" style="max-width: 200px;" alt="Nicholas Conlon" class="rounded">
+    <img src="headshots/Nicholas_Conlon.jpg" style="max-width: 200px;" alt="Nicholas Conlon" class="rounded">
 </div>
     <div class="col-md-9 pb-4">
       <h4> Nicholas Conlon </h4>
@@ -82,7 +97,7 @@
       </div>
 
 <div class="row pb-5 mt-4 pt-2">
-    <div class="col pb-4 text-left"> <img src="Yang_Yue.jpg" style="max-width: 200px;" alt="Yang Yue" class="rounded"> </div>
+    <div class="col pb-4 text-left"> <img src="headshots/Yang_Yue.jpg" style="max-width: 200px;" alt="Yang Yue" class="rounded"> </div>
       <div class="col-md-9 pb-4">
           <h4> Yang Yue </h4>
           <p>Yue Yang received his master degree in computer science in 2023 from Georgia Institute of Technology, and is now a Ph.D. student in computer science at the University of North Carolina at Chapel Hill. His research interests include human robot interaction, imitation learning, generative models.</p>
@@ -99,7 +114,7 @@
     </div>
 <hr>
 <div class="row pb-5 mt-4 pt-2">
-  <div class="col pb-4 text-left"> <img src="Lilly_Nekervis.jpeg" style="max-width: 200px;" alt="Lily Nekervis" class="rounded"> </div>
+  <div class="col pb-4 text-left"> <img src="headshots/Lilly_Nekervis.jpeg" style="max-width: 200px;" alt="Lily Nekervis" class="rounded"> </div>
     <div class="col-md-9 pb-4">
         <h4> LillyAnn Nekervis </h4>
         <p>I am a Junior at the University of North Carolina at Chapel Hill, majoring in Information Sciences and actively involved in the IRON Lab. I'm currently exploring autonomous robotic systems and their integration with artificial intelligence.</p>
