Organization of files

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
               <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
                   <div class="container">
                       <a class="navbar-brand me-auto" href="#">
-                        <img src="Iron_logo.png"  alt="IRON logo" height="75" class="d-inline-block align-top"> </a>
+                        <img src="website_imgs/Iron_logo.png"  alt="IRON logo" height="75" class="d-inline-block align-top"> </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
               </button>
@@ -68,7 +68,7 @@
     University of North Carolina at Chapel Hill <br>
     232 S Columbia St, Chapel Hill, NC 27514</p></div>
   <div class = "row pb-2">
-    <img class = "img-fluid" src="sitterson_hall.jpg" alt="Sitterson Hall - Credit to UNC Computer Science" >
+    <img class = "img-fluid" src="website_imgs/sitterson_hall.jpg" alt="Sitterson Hall - Credit to UNC Computer Science" >
       <p class = "mt-1 text-center text-muted">UNC Department of Computer Science</p></div>
 </div>
 
