--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
               <div class="container">
                   <a class="navbar-brand me-auto" href="#">
-                    <img src="Iron_logo.png" alt=" IRON logo" height="75" class="d-inline-block align-top"> </a>
+                    <img src="website_imgs/Iron_logo.png" alt=" IRON logo" height="75" class="d-inline-block align-top"> </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
@@ -51,13 +51,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="otter1.jpg" alt="Otters! photo from https://animals.sandiegozoo.org/animals/otter">
+      <img class="d-block w-100" src="carousel/otter1.jpg" alt="Otters! photo from https://animals.sandiegozoo.org/animals/otter">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="otter2.jpg" alt="Otters! Photo from public domain">
+      <img class="d-block w-100" src="carousel/otter2.jpg" alt="Otters! Photo from public domain">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="group_labs_photo.jpg" alt="Third slide">
+      <img class="d-block w-100" src="carousel/group_labs_photo.jpg" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -81,7 +81,7 @@
         <h2  class="text-center mt-5 mb-3">Recent News</h2>
         <div class = "col-sm mb-3">
             <div class="card mx-auto" style="width: 18rem;">
-                <img class="card-im g-top" src="college-lecture.jpeg" alt="Card image cap">
+                <img class="card-im g-top" src="website_imgs/college-lecture.jpeg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Guiding the Development of Undergraduate Education Robotics</h5>
                   <p class="card-text">Proceedings of the ACM Conference on Global Computing Education</p>
@@ -91,7 +91,7 @@
         </div>
         <div class = "col-sm mb-3">
             <div class="card mx-auto" style="width: 18rem;">
-                <img class="card-img-top" src="human-robot-interaction.jpg" alt="Card image cap">
+                <img class="card-img-top" src="website_imgs/human-robot-interaction.jpg" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy</h5>
                   <p class="card-text">ACM Transactions on Human-Robot Interaction</p>
@@ -101,7 +101,7 @@
         </div>
         <div class = "col-sm mb-3 mt-2">
           <div class="card mx-auto" style="width: 18rem;">
-              <img class="card-img-top" src="human-robot-conversation-group.jpg" alt="Card image cap">
+              <img class="card-img-top" src="website_imgs/human-robot-conversation-group.jpg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Predicting Positions of People in Human-Robot Conversational Groups</h5>
                 <p class="card-text">17th ACM/IEEE International Conference on Human-Robot Interaction (HRI)</p>
