--- a/research.html
+++ b/research.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
             <div class="container">
                 <a class="navbar-brand me-auto" href="#">
-                  <img src="Iron_logo.png"  alt="IRON logo" height="75" class="d-inline-block align-top"> </a>
+                  <img src="website_imgs/Iron_logo.png"  alt="IRON logo" height="75" class="d-inline-block align-top"> </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,14 +40,14 @@
 <div class = "row"><h1 class = "text-center p-4">Current Research</h1></div>
 <div class="row mb-5 mt-4">
   <div class="col-sm-5 ">
-    <img src="college-lecture.jpeg" alt="Creative Commons license image of a college lecture." class = "pb-4">
+    <img src="website_imgs/college-lecture.jpeg" alt="Creative Commons license image of a college lecture." class = "pb-4">
   </div>
   <div class="col-sm">
       <h4>Guiding the Development of Undergraduate Educational Robotics</h4>
       <p>Bryce Ikeda, Janine Hoelscher, Ron Alterovitz, Daniel Szafir
       <br>Proceedings of the ACM Conference on Global Computing Education
       <br>December 2023 
-      <br><a href="guiding_the_dev_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light  mt-2">PDF</a>
+      <br><a href="pdfs/guiding_the_dev_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light  mt-2">PDF</a>
     </p>
   </div>
 </div>
@@ -55,14 +55,14 @@
 
 <div class = "row mb-5">
   <div class="col-sm-5">
-    <img src="human-robot-interaction.jpg" alt="Creative Commons license image of a woman interacting with a robot." class = "pb-4">
+    <img src="website_imgs/human-robot-interaction.jpg" alt="Creative Commons license image of a woman interacting with a robot." class = "pb-4">
   </div>
   <div class="col-sm">
       <h4>Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy</h4>
       <p>Michael Walker, Thao Phung, Tathagata Chakraborti, Tom Williams, Daniel Szafir
       <br>ACM Transactions on Human-Robot Interaction
       <br>July 2023
-      <br><a href="virtual-augmented_pdf" class="btn bg-light btn-sm rounded-0 text-dark mt-2">PDF</a>
+      <br><a href="pdfs/virtual-augmented_pdf" class="btn bg-light btn-sm rounded-0 text-dark mt-2">PDF</a>
     </p>
   </div>
 </div>
@@ -70,14 +70,14 @@
 
 <div class = "row mb-5">
   <div class="col-sm-5">
-    <img src="language-models.jpg" alt="Creative Commons license image of a collection of words on a digital display." class = "pb-4">
+    <img src="website_imgs/language-models.jpg" alt="Creative Commons license image of a collection of words on a digital display." class = "pb-4">
   </div>
   <div class="col-sm">
       <h4>Generating Executable Action Plans with Environmentally-Aware Language Models</h4>
       <p>Maitrey Gramopadhye and Daniel Szafir
       <br>Cornell University
       <br>May 2023
-      <br><a href="generating-exec_pdf.pdf" class="btn bg-secondary btn-sm rounded-0 text-dark  mt-2">PDF</a>
+      <br><a href="pdfs/generating-exec_pdf.pdf" class="btn bg-secondary btn-sm rounded-0 text-dark  mt-2">PDF</a>
     </p>
   </div>
 </div>
@@ -85,14 +85,14 @@
 
 <div class = "row mb-5">
   <div class="col-sm-5">
-    <img src="human-robot-conversation-group.jpg" alt="Creative Commons license image of a woman interacting with a robot." class = "pb-4">
+    <img src="website_imgs/human-robot-conversation-group.jpg" alt="Creative Commons license image of a woman interacting with a robot." class = "pb-4">
   </div>
   <div class="col-sm">
       <h4>Predicting Positions of People in Human-Robot Conversational Groups</h4>
       <p>Hooman Hedayati and Daniel Szafir
       <br>17th ACM/IEEE International Conference on Human-Robot Interaction (HRI)
       <br>March 2022
-      <br><a href="predicting_positions_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light mt-2">PDF</a>
+      <br><a href="pdfs/predicting_positions_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light mt-2">PDF</a>
     </p>
   </div>
 </div>
@@ -100,14 +100,14 @@
 
 <div class = "row">
   <div class="col-sm-5">
-    <img src="augmented-reality.jpg" alt="Creative Commons license image of an augmented reality." class = "pb-4">
+    <img src="website_imgs/augmented-reality.jpg" alt="Creative Commons license image of an augmented reality." class = "pb-4">
   </div>
   <div class="col-sm">
       <h4>Augmented Reality Coordination Of Human-Robot Interaction</h4>
       <p>Daniel Szafir, Michael E. Walker, and Hooman Hedayati
       <br>University of Colorado
       <br>April 2021
-      <br><a href="augmented_reality_pdf.pdf" class="btn bg-light btn-sm rounded-0 text-dark mt-2">PDF</a>
+      <br><a href="pdfs/augmented_reality_pdf.pdf" class="btn bg-light btn-sm rounded-0 text-dark mt-2">PDF</a>
     </p>
   </div>
 </div>
