--- a/team.html
+++ b/team.html
@@ -131,19 +131,19 @@
   <hr>
   
   <div  class = "row p-2">
-        <div class = "col"> <img src="otter_headshot.jpg" style="max-width: 100px;" alt="Otter picture from https://www.flickr.com/people/23660854@N07" class="rounded"> </div>
+        <div class = "col"> <img src="headshots/otter_headshot.jpg" style="max-width: 100px;" alt="Otter picture from https://www.flickr.com/people/23660854@N07" class="rounded"> </div>
         <div class = "col">They're semi-aquatic mammals</div>
   </div>
   <div  class = "row p-2">
-      <div class = "col"> <img src="otter_headshot.jpg" style="max-width: 100px;" alt="Otter picture from https://www.flickr.com/people/23660854@N07" class="rounded"> </div>
+      <div class = "col"> <img src="headshots/otter_headshot.jpg" style="max-width: 100px;" alt="Otter picture from https://www.flickr.com/people/23660854@N07" class="rounded"> </div>
       <div class = "col">They're not picky eaters</div>
   </div>
   <div  class = "row p-2">
-      <div class = "col"> <img src="otter_headshot.jpg" style="max-width: 100px;" alt="Otter picture from https://www.flickr.com/people/23660854@N07" class="rounded"> </div>
+      <div class = "col"> <img src="headshots/otter_headshot.jpg" style="max-width: 100px;" alt="Otter picture from https://www.flickr.com/people/23660854@N07" class="rounded"> </div>
       <div class = "col">They're perfect little predators</div>
   </div>
   <div  class = "row p-2">
-      <div class = "col"> <img src="otter_headshot.jpg" style="max-width: 100px;" alt="Otter picture from https://www.flickr.com/people/23660854@N07" class="rounded"> </div>
+      <div class = "col"> <img src="headshots/otter_headshot.jpg" style="max-width: 100px;" alt="Otter picture from https://www.flickr.com/people/23660854@N07" class="rounded"> </div>
         <div class = "col">They'll steal your heart</div>
   </div>
   
