--- a/research.html
+++ b/research.html
@@ -37,6 +37,25 @@
     </div>
 </header>
 
+<!--
+  Example code for Research presentation
+  <div class = "row"><h1 class = "text-center p-4">Current Research</h1></div>
+<div class="row mb-5 mt-4">
+  <div class="col-sm-5 ">
+    <img src="IMG of choice" alt="title/description of image" class = "pb-4">
+  </div>
+  <div class="col-sm">
+      <h4>TITLE</h4>
+      <p>AUTHORS
+      <br>Proceedings/conferences/publishment
+      <br>Date
+      <br><a href="pdf file/website link" class="btn btn-primary btn-sm rounded-0 text-light  mt-2">PDF</a>
+    </p>
+  </div>
+</div>
+<hr>
+-->
+
 <div class = "row"><h1 class = "text-center p-4">Current Research</h1></div>
 <div class="row mb-5 mt-4">
   <div class="col-sm-5 ">
